<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:seekbar="http://seekbar.com" >

	<PreferenceCategory android:title="@string/preferences_enrollment_check_for_duplicates">
		<ListPreference
				android:key="finger_capturing_device"
				android:title="@string/preferences_finger_capturing_device"
				android:summary="@string/msg_no_device_selected">
		</ListPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_enrollment_check_for_duplicates">
		<CheckBoxPreference
			android:key="finger_enrollment_check_for_duplicates"
			android:defaultValue="true"
			android:title="@string/preferences_enrollment_check_for_duplicates" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_matching" >
		<ListPreference
			android:key="finger_matching_speed"
			android:title="@string/preferences_matching_speed"
			android:entries="@array/finger_maching_speed_names"
			android:entryValues="@array/finger_maching_speed_values"
			android:defaultValue="0" />

		<com.neurotec.samples.preferences.SeekBarPreference
			android:key="finger_maximal_rotation"
			android:title="@string/preferences_finger_matcher_maximal_rotation"
			seekbar:min="0"
			android:max="180"
			android:defaultValue="180" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_extraction" >
		<ListPreference
			android:key="finger_template_size"
			android:title="@string/preferences_template_size"
			android:entries="@array/finger_template_size_names"
			android:entryValues="@array/finger_template_size_values"
			android:defaultValue="64" />

		<com.neurotec.samples.preferences.SeekBarPreference
			android:key="finger_quality_threshold"
			android:title="@string/preferences_quality_threshold"
			seekbar:min="0"
			android:max="100"
			android:defaultValue="39"/>

		<CheckBoxPreference
			android:key="finger_fast_extraction"
			android:title="@string/preferences_finger_fast_extraction"
			android:defaultValue="false" />

		<CheckBoxPreference
			android:key="finger_return_binarized_image"
			android:title="@string/preferences_finger_return_binarized_image"
			android:defaultValue="false" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_reset_to_defaults">
		<Preference
			android:key="finger_set_default_preferences"
			android:title="@string/preferences_reset_to_defaults"
			android:summary="@string/preferences_reset_to_defaults_summary" />
	</PreferenceCategory>
</PreferenceScreen>