<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<group android:id="@+id/action_group_common">
		<item android:id="@+id/action_clear_db"
			android:icon="@android:drawable/btn_dialog"
			android:orderInCategory="9996"
			android:showAsAction="never"
			android:title="@string/menu_clear_db" />
		<item android:id="@+id/action_view_db"
			android:icon="@android:drawable/btn_dialog"
			android:orderInCategory="9995"
			android:showAsAction="never"
			android:title="@string/menu_view_db" />
		<item android:id="@+id/action_preferences"
			android:icon="@android:drawable/btn_dialog"
			android:orderInCategory="9994"
			android:showAsAction="never"
			android:title="@string/menu_preferences" />
		<item android:id="@+id/action_activation"
			android:icon="@android:drawable/ic_menu_preferences"
			android:title="@string/menu_activation"
			android:orderInCategory="9993"
			android:showAsAction="never"/>
	</group>
</menu>
