<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activities.AboutMishoActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_marginTop="82sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_policy"
            android:text="@string/about_misho"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="380sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/data_policy2"
            android:text="@string/offer"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="380sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_policy3"
            android:text="@string/mgt"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="380sp"
            android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_abt"
        android:text="EXIT HERE"
        android:layout_marginTop="300sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>